Fix card colors in dark mode. (#3691)

--- a/components/frontend/src/semantic_ui_react_wrappers/Card.css
+++ b/components/frontend/src/semantic_ui_react_wrappers/Card.css
@@ -1,3 +1,11 @@
 .ui.inverted.card {
     background: rgba(50, 50, 50, 0.8);
 }
+
+.ui.inverted.card:hover {
+    background: rgba(30, 30, 30, 0.8);
+}
+
+.ui.inverted.card > .content > .header {
+    color: rgba(255, 255, 255, 0.87);
+}
